--- a/config/west.yml
+++ b/config/west.yml
@@ -6,7 +6,7 @@ manifest:
       url-base: https://github.com/petejohanson
   projects:
     - name: zmk
-      remote: petejohanson
+      remote: zmkfirmware
       revision: main
       import: app/west.yml
   self:
